# ebook_convert

./: .gitignore  CLAUDE.md  README.md
.forgejo/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
ebook-convert-rs/: .gitignore  Cargo.toml  README.md
ebook-convert-rs/.cargo/: config.toml
ebook-convert-rs/crates/convert-core/: Cargo.toml
ebook-convert-rs/crates/convert-core/benches/: core_bench.rs
ebook-convert-rs/crates/convert-core/src/: book.rs  error.rs  lib.rs  options.rs  pipeline.rs  plugin.rs
ebook-convert-rs/crates/convert-input-docx/: Cargo.toml
ebook-convert-rs/crates/convert-input-docx/src/: document.rs  lib.rs  metadata.rs  styles.rs
ebook-convert-rs/crates/convert-input-epub/: Cargo.toml
ebook-convert-rs/crates/convert-input-epub/src/: lib.rs  parser.rs
ebook-convert-rs/crates/convert-input-fb2/: Cargo.toml
ebook-convert-rs/crates/convert-input-fb2/src/: lib.rs
ebook-convert-rs/crates/convert-input-html/: Cargo.toml
ebook-convert-rs/crates/convert-input-html/src/: lib.rs
ebook-convert-rs/crates/convert-input-mobi/: Cargo.toml
ebook-convert-rs/crates/convert-input-mobi/src/: lib.rs
ebook-convert-rs/crates/convert-input-odt/: Cargo.toml
ebook-convert-rs/crates/convert-input-odt/src/: lib.rs
ebook-convert-rs/crates/convert-input-pdf/: Cargo.toml
ebook-convert-rs/crates/convert-input-pdf/examples/: inspect_images.rs  inspect_transforms.rs  test_jp2.rs
ebook-convert-rs/crates/convert-input-pdf/src/: classify.rs  extract.rs  lib.rs  pdftohtml.rs  render.rs  text_builder.rs  toc.rs
ebook-convert-rs/crates/convert-input-rtf/: Cargo.toml
ebook-convert-rs/crates/convert-input-rtf/src/: lib.rs
ebook-convert-rs/crates/convert-input-txt/: Cargo.toml
ebook-convert-rs/crates/convert-input-txt/src/: lib.rs
ebook-convert-rs/crates/convert-output-epub/: Cargo.toml
ebook-convert-rs/crates/convert-output-epub/benches/: epub_bench.rs
ebook-convert-rs/crates/convert-output-epub/src/: lib.rs  writer.rs
ebook-convert-rs/crates/convert-output-html/: Cargo.toml
ebook-convert-rs/crates/convert-output-html/src/: lib.rs
ebook-convert-rs/crates/convert-output-mobi/: Cargo.toml
ebook-convert-rs/crates/convert-output-mobi/src/: lib.rs
ebook-convert-rs/crates/convert-output-pdf/: Cargo.toml
ebook-convert-rs/crates/convert-output-pdf/benches/: pdf_bench.rs
ebook-convert-rs/crates/convert-output-pdf/src/: lib.rs
ebook-convert-rs/crates/convert-output-txt/: Cargo.toml
ebook-convert-rs/crates/convert-output-txt/src/: lib.rs
ebook-convert-rs/crates/convert-transforms/: Cargo.toml
ebook-convert-rs/crates/convert-transforms/benches/: transforms_bench.rs
ebook-convert-rs/crates/convert-transforms/src/: clean_guide.rs  css_flattener.rs  data_url.rs  detect_structure.rs  image_rescale.rs  jacket.rs  lib.rs  linearize_tables.rs  manifest_trimmer.rs  merge_metadata.rs  page_margin.rs  split_chapters.rs  unsmarten.rs
ebook-convert-rs/crates/convert-utils/: Cargo.toml
ebook-convert-rs/crates/convert-utils/src/: archive.rs  encoding.rs  lib.rs  mime.rs  xml.rs
ebook-convert-rs/crates/ebook-convert/: Cargo.toml
ebook-convert-rs/crates/ebook-convert/benches/: e2e_bench.rs
ebook-convert-rs/crates/ebook-convert/src/: main.rs
scripts/: build-all.sh  build-release.sh  check.sh  setup-cross.sh  setup-deps.sh
