[package]
name = "convert-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
rayon.workspace = true
uuid.workspace = true
url.workspace = true
regex.workspace = true
once_cell.workspace = true
toml.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "core_bench"
harness = false
