[package]
name = "convert-input-epub"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert-core = { path = "../convert-core" }
convert-utils = { path = "../convert-utils" }
thiserror.workspace = true
log.workspace = true
quick-xml.workspace = true
zip.workspace = true
rayon.workspace = true
