[package]
name = "convert-input-fb2"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert-core = { path = "../convert-core" }
convert-utils = { path = "../convert-utils" }
quick-xml.workspace = true
base64.workspace = true
log.workspace = true
regex.workspace = true
