[package]
name = "convert-input-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert-core = { path = "../convert-core" }
convert-utils = { path = "../convert-utils" }
thiserror.workspace = true
log.workspace = true
lopdf.workspace = true
quick-xml.workspace = true
tempfile = "3.25.0"
