[package]
name = "convert-output-epub"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert-core = { path = "../convert-core" }
convert-utils = { path = "../convert-utils" }
thiserror.workspace = true
log.workspace = true
zip.workspace = true
quick-xml.workspace = true
uuid.workspace = true
