[package]
name = "convert-output-epub"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert-core = { path = "../convert-core" }
convert-utils = { path = "../convert-utils" }
thiserror.workspace = true
log.workspace = true
zip.workspace = true
quick-xml.workspace = true
rayon.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
convert-utils = { path = "../convert-utils" }
image.workspace = true

[[bench]]
name = "epub_bench"
harness = false
