[package]
name = "convert-output-mobi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert-core = { path = "../convert-core" }
convert-utils = { path = "../convert-utils" }
thiserror.workspace = true
log.workspace = true
rayon.workspace = true
regex.workspace = true
