[package]
name = "convert-output-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert-core = { path = "../convert-core" }
convert-utils = { path = "../convert-utils" }
thiserror.workspace = true
log.workspace = true
rayon.workspace = true
regex.workspace = true
printpdf.workspace = true

[dev-dependencies]
criterion.workspace = true
convert-utils = { path = "../convert-utils" }
image.workspace = true

[[bench]]
name = "pdf_bench"
harness = false
