[package]
name = "ebook-convert"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ebook-convert-rs"
path = "src/main.rs"

[dependencies]
convert-core = { path = "../convert-core" }
convert-utils = { path = "../convert-utils" }
convert-transforms = { path = "../convert-transforms" }
convert-input-pdf = { path = "../convert-input-pdf" }
convert-input-epub = { path = "../convert-input-epub" }
convert-input-html = { path = "../convert-input-html" }
convert-input-txt = { path = "../convert-input-txt" }
convert-output-epub = { path = "../convert-output-epub" }
convert-output-html = { path = "../convert-output-html" }
convert-output-txt = { path = "../convert-output-txt" }
clap.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
