[package]
name = "ebook-convert"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ebook-convert-rs"
path = "src/main.rs"

[dependencies]
convert-core = { path = "../convert-core" }
convert-utils = { path = "../convert-utils" }
convert-transforms = { path = "../convert-transforms" }
convert-input-pdf = { path = "../convert-input-pdf" }
convert-input-epub = { path = "../convert-input-epub" }
convert-input-html = { path = "../convert-input-html" }
convert-input-txt = { path = "../convert-input-txt" }
convert-input-mobi = { path = "../convert-input-mobi" }
convert-input-docx = { path = "../convert-input-docx" }
convert-input-fb2 = { path = "../convert-input-fb2" }
convert-input-rtf = { path = "../convert-input-rtf" }
convert-input-odt = { path = "../convert-input-odt" }
convert-output-epub = { path = "../convert-output-epub" }
convert-output-html = { path = "../convert-output-html" }
convert-output-txt = { path = "../convert-output-txt" }
convert-output-pdf = { path = "../convert-output-pdf" }
convert-output-mobi = { path = "../convert-output-mobi" }
clap.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
toml.workspace = true
serde.workspace = true
dirs.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3"

[[bench]]
name = "e2e_bench"
harness = false
